--- a/数组/209.长度最小的子数组.md
+++ b/数组/209.长度最小的子数组.md
@@ -1,4 +1,5 @@
 ## 题目描述：
+<font style="color:rgb(38, 38, 38);">给定一个含有 </font>`<font style="color:rgba(38, 38, 38, 0.75);">n</font>`**<font style="color:rgb(38, 38, 38);"> </font>**<font style="color:rgb(38, 38, 38);">个正整数的数组和一个正整数</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`**<font style="color:rgb(38, 38, 38);"> </font>****<font style="color:rgb(38, 38, 38);">。</font>**
 
 <font style="color:rgb(38, 38, 38);">找出该数组中满足其总和大于等于</font>**<font style="color:rgb(38, 38, 38);"> </font>**`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`**<font style="color:rgb(38, 38, 38);"> </font>**<font style="color:rgb(38, 38, 38);">的长度最小的</font><font style="color:rgb(38, 38, 38);"> </font>**子数组**<font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">[nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">l</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">l+1</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, ..., nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">r-1</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">r</font></sub><font style="color:rgba(38, 38, 38, 0.75);">]</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">，并返回其长度</font>**<font style="color:rgb(38, 38, 38);">。</font>**<font style="color:rgb(38, 38, 38);">如果不存在符合条件的子数组，返回</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">0</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">。</font>
 
