--- a/数组/27.移除元素.md
+++ b/数组/27.移除元素.md
@@ -1,14 +1,15 @@
+# 27.移除元素
+
 ## 题目描述：
-<font style="color:rgb(38, 38, 38);">给你一个数组 </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`_<font style="color:rgb(38, 38, 38);"> </font>_<font style="color:rgb(38, 38, 38);">和一个值 </font>`<font style="color:rgba(38, 38, 38, 0.75);">val</font>`<font style="color:rgb(38, 38, 38);">，你需要 </font>[**<font style="color:rgb(38, 38, 38);">原地</font>**](https://baike.baidu.com/item/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95)<font style="color:rgb(38, 38, 38);"> 移除所有数值等于 </font>`<font style="color:rgba(38, 38, 38, 0.75);">val</font>`_<font style="color:rgb(38, 38, 38);"> </font>_<font style="color:rgb(38, 38, 38);">的元素。元素的顺序可能发生改变。然后返回 </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> 中与 </font>`<font style="color:rgba(38, 38, 38, 0.75);">val</font>`<font style="color:rgb(38, 38, 38);"> 不同的元素的数量。</font>
 
-<font style="color:rgb(38, 38, 38);">假设</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">中不等于</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">val</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">的元素数量为</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">k</font>`<font style="color:rgb(38, 38, 38);">，要通过此题，您需要执行以下操作：</font>
+给你一个数组 `nums` 和一个值 `val`，你需要 [**原地**](https://baike.baidu.com/item/原地算法) 移除所有数值等于 `val` 的元素。元素的顺序可能发生改变。然后返回 `nums` 中与 `val` 不同的元素的数量。
 
-+ <font style="color:rgb(38, 38, 38);">更改</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">数组，使</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">的前</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">k</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">个元素包含不等于</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">val</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">的元素。</font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">的其余元素和</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">的大小并不重要。</font>
-+ <font style="color:rgb(38, 38, 38);">返回 </font>`<font style="color:rgba(38, 38, 38, 0.75);">k</font>`<font style="color:rgb(38, 38, 38);">。</font>
+假设 `nums` 中不等于 `val` 的元素数量为 `k`，要通过此题，您需要执行以下操作：
 
+- 更改 `nums` 数组，使 `nums` 的前 `k` 个元素包含不等于 `val` 的元素。`nums` 的其余元素和 `nums` 的大小并不重要。
+- 返回 `k`。
 
-
-**<font style="color:rgb(38, 38, 38);">示例 1：</font>**
+**示例 1：**
 
 ```plain
 输入：nums = [3,2,2,3], val = 3
@@ -17,7 +18,7 @@
 你在返回的 k 个元素之外留下了什么并不重要（因此它们并不计入评测）。
 ```
 
-**<font style="color:rgb(38, 38, 38);">示例 2：</font>**
+**示例 2：**
 
 ```plain
 输入：nums = [0,1,2,2,3,0,4,2], val = 2
@@ -30,14 +31,13 @@
 
 
 ## 解题思路：
+
 1. 左右指针进行覆盖：一个left，一个right，左指针一旦遇到nums[left]==target的时候，便停止移动，尝试使用右指针对左指针的数组元素进行赋值，nums[left]！=target的时候，左指针移动，直到两个指针相遇。
 
-:::warning
-2. 快慢指针：一个slow，一个fast，fast一直走，当nums[fast]!=target的时候更新nums[slow]的状态，否则不更新
-
-:::
+1. 快慢指针：一个slow，一个fast，fast一直走，当nums[fast]!=target的时候更新nums[slow]的状态，否则不更新
 
 ## 代码：
+
 ```java
 import java.util.List;
 
@@ -63,10 +63,8 @@ class Solution {
         return left;
     }
 }
-//leetcode submit region end(Prohibit modification and deletion)
-```
 
-```java
+//leetcode submit region end(Prohibit modification and deletion)
 class Solution {
     public int removeElement(int[] nums, int val) {
         // 快慢指针
@@ -80,4 +78,3 @@ class Solution {
     }
 }
 ```
-
