--- a/数组/977.有序数组的平方.md
+++ b/数组/977.有序数组的平方.md
@@ -1,9 +1,10 @@
+# 977.有序数组的平方
+
 ## 题目描述：
-<font style="color:rgb(38, 38, 38);">给你一个按 </font>**<font style="color:rgb(38, 38, 38);">非递减顺序</font>**<font style="color:rgb(38, 38, 38);"> 排序的整数数组 </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);">，返回 </font>**<font style="color:rgb(38, 38, 38);">每个数字的平方</font>**<font style="color:rgb(38, 38, 38);"> 组成的新数组，要求也按 </font>**<font style="color:rgb(38, 38, 38);">非递减顺序</font>**<font style="color:rgb(38, 38, 38);"> 排序。</font>
 
-<font style="color:rgb(38, 38, 38);"></font>
+给你一个按 **非递减顺序** 排序的整数数组 `nums`，返回 **每个数字的平方** 组成的新数组，要求也按 **非递减顺序** 排序。
 
-**<font style="color:rgb(38, 38, 38);">示例 1：</font>**
+**示例 1：**
 
 ```plain
 输入：nums = [-4,-1,0,3,10]
@@ -12,7 +13,7 @@
 排序后，数组变为 [0,1,9,16,100]
 ```
 
-**<font style="color:rgb(38, 38, 38);">示例 2：</font>**
+**示例 2：**
 
 ```plain
 输入：nums = [-7,-3,2,3,11]
@@ -20,9 +21,11 @@
 ```
 
 ## 解题思路：
+
 由于数组同存在着负数，则两边的数据一定大于等于中间的数据，因此使用双指针来趋近中间元素。首先创建一个temp数组用来记录处理完的数据以便返回，接着就是经典的移动双指针解决问题，但是注意这边 right = nums.length - 1;因为比较的基础是两边的元素都能去得到，然后在while循环中不断比较数值的绝对值大小并移动指针直到相遇。
 
 ## 代码：
+
 ```java
 class Solution {
     public int[] sortedSquares(int[] nums) {
@@ -46,6 +49,3 @@ class Solution {
     }
 }
 ```
-
-
-
