--- a/数组/209.长度最小的子数组.md
+++ b/数组/209.长度最小的子数组.md
@@ -1,11 +1,14 @@
+# 209.长度最小的子数组
+
 ## 题目描述：
-<font style="color:rgb(38, 38, 38);">给定一个含有 </font>`<font style="color:rgba(38, 38, 38, 0.75);">n</font>`**<font style="color:rgb(38, 38, 38);"> </font>**<font style="color:rgb(38, 38, 38);">个正整数的数组和一个正整数</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`**<font style="color:rgb(38, 38, 38);"> </font>****<font style="color:rgb(38, 38, 38);">。</font>**
 
-<font style="color:rgb(38, 38, 38);">找出该数组中满足其总和大于等于</font>**<font style="color:rgb(38, 38, 38);"> </font>**`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`**<font style="color:rgb(38, 38, 38);"> </font>**<font style="color:rgb(38, 38, 38);">的长度最小的</font><font style="color:rgb(38, 38, 38);"> </font>**子数组**<font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">[nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">l</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">l+1</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, ..., nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">r-1</font></sub><font style="color:rgba(38, 38, 38, 0.75);">, nums</font><sub><font style="color:rgba(38, 38, 38, 0.75);">r</font></sub><font style="color:rgba(38, 38, 38, 0.75);">]</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">，并返回其长度</font>**<font style="color:rgb(38, 38, 38);">。</font>**<font style="color:rgb(38, 38, 38);">如果不存在符合条件的子数组，返回</font><font style="color:rgb(38, 38, 38);"> </font>`<font style="color:rgba(38, 38, 38, 0.75);">0</font>`<font style="color:rgb(38, 38, 38);"> </font><font style="color:rgb(38, 38, 38);">。</font>
+给定一个含有 `n` 个正整数的数组和一个正整数 `target` **。**
 
-<font style="color:rgb(38, 38, 38);"></font>
+找出该数组中满足其总和大于等于 `target` 的长度最小的 **子数组** `[numsl, numsl+1, ..., numsr-1, numsr]` ，并返回其长度**。**如果不存在符合条件的子数组，返回 `0` 。
 
-**<font style="color:rgb(38, 38, 38);">示例 1：</font>**
+
+
+**示例 1：**
 
 ```plain
 输入：target = 7, nums = [2,3,1,2,4,3]
@@ -13,14 +16,14 @@
 解释：子数组 [4,3] 是该条件下的长度最小的子数组。
 ```
 
-**<font style="color:rgb(38, 38, 38);">示例 2：</font>**
+**示例 2：**
 
 ```plain
 输入：target = 4, nums = [1,4,4]
 输出：1
 ```
 
-**<font style="color:rgb(38, 38, 38);">示例 3：</font>**
+**示例 3：**
 
 ```plain
 输入：target = 11, nums = [1,1,1,1,1,1,1,1]
@@ -30,9 +33,11 @@
 
 
 ## 解题思路：
+
 滑动窗口（双指针变式），通过维护一个可以调整大小的窗口（使用sum体现其大小，slow和fast指针调整其大小），并维护size以记录最小窗口值，直到fast越过数组终点。最后判断size的数值大小就能知道数组是否有解，无解返回0。
 
 ## 代码：
+
 ```java
 class Solution {
     public int minSubArrayLen(int target, int[] nums) {
@@ -50,4 +55,3 @@ class Solution {
     }
 }
 ```
-
