--- a/数组/58.区间和.md
+++ b/数组/58.区间和.md
@@ -1,9 +1,12 @@
+# 58.区间和
+
 注：本题为代码随想录题目，非LeetCode题目
 
 ## 题目描述：
-<font style="color:rgb(33, 37, 41);">给定一个整数数组 </font>`<font style="color:rgb(33, 37, 41);">Array</font>`<font style="color:rgb(33, 37, 41);">，请计算该数组在每个指定区间内元素的总和。</font>
 
-**<font style="color:rgb(38, 38, 38);">示例 1：</font>**
+给定一个整数数组 `Array`，请计算该数组在每个指定区间内元素的总和。
+
+**示例 1：**
 
 ```plain
 输入：
@@ -22,9 +25,11 @@
 ```
 
 ## 解题思路：
+
 本题就是经典的使用前缀和的题目，先计算每一个index的前缀和，然后利用前缀和相减得到sum[i,j];
 
 ## 代码：
+
 ```java
 import java.util.Scanner;
 
@@ -60,4 +65,3 @@ public class Main {
     }
 }
 ```
-
