--- a/数组/704.二分查找.md
+++ b/数组/704.二分查找.md
@@ -1,24 +1,27 @@
+# 704.二分查找
+
 ## 题目描述：
-<font style="color:rgb(38, 38, 38);">给定一个 </font>`<font style="color:rgba(38, 38, 38, 0.75);">n</font>`<font style="color:rgb(38, 38, 38);"> 个元素有序的（升序）整型数组 </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> 和一个目标值 </font>`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`<font style="color:rgb(38, 38, 38);">  ，写一个函数搜索 </font>`<font style="color:rgba(38, 38, 38, 0.75);">nums</font>`<font style="color:rgb(38, 38, 38);"> 中的 </font>`<font style="color:rgba(38, 38, 38, 0.75);">target</font>`<font style="color:rgb(38, 38, 38);">，如果目标值存在返回下标，否则返回 </font>`<font style="color:rgba(38, 38, 38, 0.75);">-1</font>`<font style="color:rgb(38, 38, 38);">。</font>
 
-<font style="color:rgb(38, 38, 38);background-color:rgb(240, 240, 240);">  
-</font>**<font style="color:rgb(38, 38, 38);background-color:rgb(240, 240, 240);">示例 1:</font>**
+给定一个 `n` 个元素有序的（升序）整型数组 `nums` 和一个目标值 `target`  ，写一个函数搜索 `nums` 中的 `target`，如果目标值存在返回下标，否则返回 `-1`。
 
-```plain
+**示例 1:**
+
+```
 输入: nums = [-1,0,3,5,9,12], target = 9
 输出: 4
 解释: 9 出现在 nums 中并且下标为 4
 ```
 
-**<font style="color:rgb(38, 38, 38);background-color:rgb(240, 240, 240);">示例 2:</font>**
+**示例 2:**
 
-```plain
+```
 输入: nums = [-1,0,3,5,9,12], target = 2
 输出: -1
 解释: 2 不存在 nums 中因此返回 -1
 ```
 
 ## 解题思路：
+
 这是一道二分算法的基础题，主要用于熟悉二分算法。
 
 注意二分算法的两种写法，一种是int right = nums.length;一种是int right = nums.length -1; 
@@ -28,7 +31,9 @@
 同时判断之后的边界也有差异，也就是当nums[mid] != target 的时候，right是否取到mid
 
 ## 代码：
+
 ```java
+// 写法1：[left,right)写法
 class Solution {
     public int search(int[] nums, int target) {
           int left=0,right=nums.length;
@@ -48,9 +53,8 @@ class Solution {
     }
    
 }
-```
 
-```java
+// 写法2：[left,right]写法
 class Solution {
     public int search(int[] nums, int target) {
         int left=0,right=nums.length-1;
@@ -70,4 +74,3 @@ class Solution {
     }
 }
 ```
-
