--- a/数组/59.螺旋矩阵II.md
+++ b/数组/59.螺旋矩阵II.md
@@ -27,6 +27,11 @@
 
 **示例3：**
 
+```
+输入：n = 5
+输出：......见下图
+```
+
 |  1   |  2   |  3   |  4   |  5   |
 | :--: | :--: | :--: | :--: | :--: |
 |  16  |  17  |  18  |  19  |  6   |
