--- a/链表/142.环形链表II.md
+++ b/链表/142.环形链表II.md
@@ -42,7 +42,7 @@
 
 通过快慢指针形成路程差，再利用第三个指针最终可以使得两指针在环链入口处相遇。
 
-![01c768b013427d6794a220b3b2d5272](D:\办公软件\WeChat\WeChat file\WeChat Files\WeChatCache\WeChat Files\wxid_0kg0eqact2ib22\FileStorage\Temp\01c768b013427d6794a220b3b2d5272.jpg)
+![环形链表 II](D:\Github\LeetCode-Learning\images\环形链表 II.jpg)
 
 ## 代码：
 
