--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -17,7 +17,6 @@
 - `intersectVal` - 相交的起始节点的值。如果不存在相交节点，这一值为 `0`
 - `listA` - 第一个链表
 - `listB` - 第二个链表
-- xxxxxxxxxx class Solution {    public ListNode swapPairs(ListNode head) {        ListNode dumyhead = new ListNode(-1); // 设置一个虚拟头结点        dumyhead.next = head; // 将虚拟头结点指向head，这样方便后面做删除操作        ListNode cur = dumyhead;        ListNode tempNode; // 临时节点，保存两个节点后面的节点        ListNode firstNode; // 临时节点，保存两个节点之中的第一个节点        ListNode secondNode; // 临时节点，保存两个节点之中的第二个节点        while (cur.next != null && cur.next.next != null) {            firstNode = cur.next;            secondNode = cur.next.next;            tempNode = secondNode.next;            cur.next = secondNode;       // 步骤一            secondNode.next = firstNode; // 步骤二            firstNode.next = tempNode;      // 步骤三            cur = firstNode; // cur移动，准备下一轮交换        }        return dumyhead.next;    }}java
 - `skipB` - 在 `listB` 中（从头节点开始）跳到交叉节点的节点数
 
 评测系统将根据这些输入创建链式数据结构，并将两个头节点 `headA` 和 `headB` 传递给你的程序。如果程序能够正确返回相交节点，那么你的解决方案将被 **视作正确答案** 。
@@ -72,7 +71,7 @@
 1. 当有公共节点时候通过指针的变化最终可以使得两个指针和末端距离相等。
 2. 当没有公共节点的时候，pA和pB最多走lengthA+lengthB，最终都指向空节点。
 
-![dd6f9678114881bcb5084ea9e3f9408](D:\办公软件\WeChat\WeChat file\WeChat Files\WeChatCache\WeChat Files\wxid_0kg0eqact2ib22\FileStorage\Temp\dd6f9678114881bcb5084ea9e3f9408.jpg)
+![相交链表](D:\Github\LeetCode-Learning\images\相交链表.jpg)
 
 ## 代码：
 
