更新图片路径

--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -71,7 +71,7 @@
 1. 当有公共节点时候通过指针的变化最终可以使得两个指针和末端距离相等。
 2. 当没有公共节点的时候，pA和pB最多走lengthA+lengthB，最终都指向空节点。
 
-<img src="D:\Github\LeetCode-Learning\链表\images\相交链表.jpg" alt="相交链表" style="zoom:80%;" />
+![相交链表](./images/160.相交链表.assets/相交链表.jpg)
 
 ## 代码：
 
