--- a/链表/142.环形链表II.md
+++ b/链表/142.环形链表II.md
@@ -42,7 +42,7 @@
 
 通过快慢指针形成路程差，再利用第三个指针最终可以使得两指针在环链入口处相遇。
 
-<img src="D:\Github\LeetCode-Learning\链表\images\环形链表 II.jpg" alt="环形链表 II" style="zoom:80%;" />
+![环形链表 II](./images/142.环形链表II.assets/环形链表 II.jpg)
 
 ## 代码：
 
