--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -10,6 +10,10 @@
 
 **注意**，函数返回结果后，链表必须 **保持其原始结构** 。
 
+测试：
+
+![e83dfe2a63737a44f46334ef46267f7](./images/e83dfe2a63737a44f46334ef46267f7.png)
+
 **自定义评测：**
 
 **评测系统** 的输入如下（你设计的程序 **不适用** 此输入）：
