更新图片路径

--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -10,10 +10,6 @@
 
 **注意**，函数返回结果后，链表必须 **保持其原始结构** 。
 
-测试：
-
-![e83dfe2a63737a44f46334ef46267f7](./images/e83dfe2a63737a44f46334ef46267f7.png)
-
 **自定义评测：**
 
 **评测系统** 的输入如下（你设计的程序 **不适用** 此输入）：
@@ -75,7 +71,7 @@
 1. 当有公共节点时候通过指针的变化最终可以使得两个指针和末端距离相等。
 2. 当没有公共节点的时候，pA和pB最多走lengthA+lengthB，最终都指向空节点。
 
-![相交链表](./images/相交链表-1726985935361-11.jpg)
+![相交链表](./images/相交链表.jpg)
 
 ## 代码：
 
