--- a/栈和队列/20.有效的括号.md
+++ b/栈和队列/20.有效的括号.md
@@ -14,29 +14,31 @@
 
 **示例 1：**
 
-**输入：**s = "()"
-
-**输出：**true
+```
+输入：s = "()"
+输出：true
+```
 
 **示例 2：**
 
-**输入：**s = "()[]{}"
-
-**输出：**true
+```
+输入：s = "()[]{}"
+输出：true
+```
 
 **示例 3：**
 
-**输入：**s = "(]"
-
-**输出：**false
+```
+输入：s = "(]"
+输出：false
+```
 
 **示例 4：**
 
-**输入：**s = "([])"
-
-**输出：**true
-
- 
+```
+输入：s = "([])"
+输出：true
+```
 
 **提示：**
 
