--- a/二叉树/#501.二叉搜索树中的众数.md
+++ b/二叉树/#501.二叉搜索树中的众数.md
@@ -12,8 +12,6 @@
 + 结点右子树中所含节点的值 **大于等于** 当前节点的值
 + 左子树和右子树都是二叉搜索树
 
- 
-
 **示例 1：**
 
 ![img](./images/mode-tree.jpg)
@@ -34,7 +32,8 @@
 
 ## 解题思路：
 
-dfs暴力解法，通过dfs+map存储元素出现次数，然后遍历map确定最大出现次数。再通过一次遍历把对应的key存储到list，然后把list转成array。
+1. dfs暴力解法，通过dfs+map存储元素出现次数，然后遍历map确定最大出现次数。再通过一次遍历把对应的key存储到list，然后把list转成array。
+2. 中序遍历，巧妙利用搜索二叉树的性质，进行count，base的计算和覆盖，具体可以看代码注释。
 
 ## 代码：
 
@@ -93,6 +92,50 @@ class Solution {
         dfs(node.right);
     }
 }
-//leetcode submit region end(Prohibit modification and deletion)
+// 中序遍历优化版
+class Solution {
+    List<Integer> answer = new ArrayList<Integer>();
+    int base, count, maxCount;
+
+    public int[] findMode(TreeNode root) {
+        dfs(root);
+        int[] mode = new int[answer.size()];
+        for (int i = 0; i < answer.size(); ++i) {
+            mode[i] = answer.get(i);
+        }
+        return mode;
+    }
+
+    // 中序遍历，保证数值是从小到大，连片出现的
+    public void dfs(TreeNode o) {
+        if (o == null) {
+            return;
+        }
+        dfs(o.left);
+        update(o.val);
+        dfs(o.right);
+    }
+
+    public void update(int x) {
+        // base就是当前的数
+        if (x == base) {
+            ++count;
+        } else {
+            // 重置当前的数和出现次数
+            count = 1;
+            base = x;
+        }
+        // 出现次数相同（可能有多个众数的情况）
+        if (count == maxCount) {
+            answer.add(base);
+        }
+        // 出现次数大于之前认定的众数，进行覆盖
+        if (count > maxCount) {
+            maxCount = count;
+            answer.clear();
+            answer.add(base);
+        }
+    }
+}
 ```
 
