贪心篇完结
对贪心类题目进行了分类总结和梳理

--- a/贪心/376. 摆动序列.md
+++ b/贪心/376. 摆动序列.md
@@ -69,19 +69,23 @@ class Solution {
             return 1;
         }
         for (end = 1; end < nums.length; end++) {
+            // 平的情况，跳过
             if (nums[end]==nums[end-1]){
                 continue;
             }
             boolean currentPositive = nums[end] - nums[end-1] > 0;
+            // 初始化摆动序列状态，增加count
             if (!hasInitialed){
                 count++;
                 hasInitialed=true;
                 isPositive = currentPositive;
                 continue;
             }
+            // 摆动序列出现波峰或者波谷
             if (isPositive!=currentPositive){
                 count++;
             }
+            // 更新摆动序列状态
             isPositive = currentPositive;
         }
         return count+1;
