--- a/LeetCode Learning/链表/146.LRU缓存.md
+++ b/LeetCode Learning/链表/146.LRU缓存.md
@@ -49,22 +49,25 @@ lRUCache.get(4);    // 返回 4
 ```java
 class LRUCache {
 
-    class Node{
+    class Node {
         int key;
         int value;
         Node prev;
         Node next;
-        public Node(){}
-        public Node(int _key,int _value){
+
+        public Node() {
+        }
+
+        public Node(int _key, int _value) {
             this.key = _key;
             this.value = _value;
         }
     }
-    
-    private Map<Integer,Node> cache = new HashMap<>();
+
+    private Map<Integer, Node> cache = new HashMap<>();
     private int capacity;
     private int size;
-    private Node head,tail;
+    private Node head, tail;
 
     public LRUCache(int capacity) {
         this.size = 0;
@@ -74,60 +77,59 @@ class LRUCache {
         head.next = tail;
         tail.prev = head;
     }
-    
+
     public int get(int key) {
         Node node = cache.get(key);
-        if(node == null){
+        if (node == null) {
             return -1;
         }
         moveToHead(node);
         return node.value;
     }
-    
+
     public void put(int key, int value) {
         Node node = cache.get(key);
-        if(node == null){
-            Node newNode = new Node(key,value);
+        if (node == null) {
+            Node newNode = new Node(key, value);
             // 添加到哈希表
-            cache.put(key,newNode);
+            cache.put(key, newNode);
             // 添加到双向链表头部，注意这里是add不是move，这个节点本身就是还没融入链表，进行remove操作会空指针
             addToHead(newNode);
             size++;
-            if(size>capacity){
+            if (size > capacity) {
                 Node nodeToRemove = removeTail();
                 cache.remove(nodeToRemove.key); // 从缓存中移除，正确使用 key
                 size--;
             }
-        }else{
+        } else {
             node.value = value;
             moveToHead(node);
         }
     }
-    
-    private void moveToHead(Node node){
+
+    private void moveToHead(Node node) {
         removeNode(node);
         addToHead(node);
     }
 
-    private void addToHead(Node node){
+    private void addToHead(Node node) {
         node.next = head.next;
         node.prev = head;
         head.next.prev = node;
         head.next = node;
     }
 
-    private void removeNode(Node node){
+    private void removeNode(Node node) {
         node.prev.next = node.next;
         node.next.prev = node.prev;
     }
 
-    private Node removeTail(){
+    private Node removeTail() {
         Node res = tail.prev;
         removeNode(res);
         return res;
     }
 }
-
 
 ```
 
