--- a/LeetCode Learning/字符串/3. 无重复字符的最长子串.md
+++ b/LeetCode Learning/字符串/3. 无重复字符的最长子串.md
@@ -45,19 +45,18 @@
 ```java
 class Solution {
     public int lengthOfLongestSubstring(String s) {
-        // 滑动窗口
         int left = 0;
         int res = 0;
-        Map<Character,Integer> map = new HashMap<>();
-        for(int i=0;i<s.length();i++){
-            if(map.containsKey(s.charAt(i))){
+        Map<Character, Integer> map = new HashMap<>();
+        for (int i = 0; i < s.length(); i++) {
+            // 注意Map是判断containsKey(key)，List才是判断contains()
+            if (map.containsKey(s.charAt(i))) {
                 // 如果有重复的数，那么左边界就要移动,移动到不包含重复串的位置
-                left = Math.max(left,map.get(s.charAt(i))+1);
+                left = Math.max(left, map.get(s.charAt(i)) + 1);
             }
-            // 每次记得记录长度
-            map.put(s.charAt(i),i);
-            // 计算长度，长度是right-left=1
-            res = Math.max(res,i-left+1);
+            map.put(s.charAt(i), i);
+            // 计算长度，长度是right-left+1
+            res = Math.max(res, i - left + 1);
         }
         return res;
     }
